use more modern notation